Agregué la funcion del boton copiar

--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
                 </div>
             </section>
             <section>
-                 <textarea class="area-encriptada" name="" id="" cols="20" rows="10"></textarea>
+                 <textarea id="copiarArea" class="area-encriptada" name="" id="" cols="20" rows="10"></textarea>
                  <div>
-                     <button class="copiar" onclick="btncopiar()">Copiar texto</button>
+                     <button id="copiarBtn" class="copiar" onclick="btncopiar()">Copiar texto</button>
                  </div>
             </section>
         </main>
